Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   </main>
 
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-  <script src="Map.js"></script>
+  <script src="map.js"></script>
   <script>
     // Create initial dropoff row on load and wire add button
     (function initDropoffsUI() {
@@ -74,3 +74,4 @@
   </script>
 </body>
 </html>
+
